<resources>
    <string name="app_name">Calculator</string>
    <string name="Button">0</string>
    <string name="button">1</string>
    <string name="button3">=</string>
    <string name="button4">1</string>
    <string name="textview" />
    <string name="decimal">.</string>
    <string name="add">+</string>
    <string name="numTwo">2</string>
    <string name="numThree">3</string>
    <string name="numFour">4</string>
    <string name="numFive">5</string>
    <string name="numSix">6</string>
    <string name="numSeven">7</string>
    <string name="numEight">8</string>
    <string name="numNine">9</string>
    <string name="minusBtn">-</string>
    <string name="multBtn">*</string>
    <string name="clearBtn">C</string>
    <string name="divideBtn">/</string>
</resources>
